tests/baselines/reference/ClassDeclarationWithInvalidConstOnPropertyDeclaration2(strict=true).errors.txt
ClassDeclarationWithInvalidConstOnPropertyDeclaration2.ts(2,5): error TS7008: Member 'const' implicitly has an 'any' type.


==== ClassDeclarationWithInvalidConstOnPropertyDeclaration2.ts (1 errors) ====
    class C {
        const
        ~~~~~
!!! error TS7008: Member 'const' implicitly has an 'any' type.
        x = 10;
    }